// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Components - Snapshots JobCard should match snapshot for completed job 1`] = `
<TouchableOpacity
  accessibilityLabel="Job: Electrical Work, , completed"
  accessibilityRole="button"
  onPress={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 2,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.08,
      "shadowRadius": 8,
    }
  }
  testID="job-card"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      numberOfLines={2}
      style={
        {
          "color": "#222222",
          "flex": 1,
          "fontSize": 19,
          "fontWeight": "600",
          "marginRight": 8,
        }
      }
    >
      Electrical Work
    </Text>
    <Text
      style={
        {
          "color": "#222222",
          "fontSize": 19,
          "fontWeight": "700",
        }
      }
    >
      £NaN
    </Text>
  </View>
  <Text
    numberOfLines={3}
    style={
      {
        "color": "#717171",
        "fontSize": 15,
        "lineHeight": 21,
        "marginBottom": 12,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 8,
            "borderWidth": 1,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#ECFDF5",
            "borderColor": "#A7F3D0",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 11,
              "fontWeight": "500",
            },
            {
              "color": "#047857",
            },
          ]
        }
      >
        Completed
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`Card Components - Snapshots JobCard should match snapshot for pending job 1`] = `
<TouchableOpacity
  accessibilityLabel="Job: Plumbing Repair, , posted"
  accessibilityRole="button"
  onPress={[Function]}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 2,
      "marginHorizontal": 16,
      "marginVertical": 8,
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.08,
      "shadowRadius": 8,
    }
  }
  testID="job-card"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      numberOfLines={2}
      style={
        {
          "color": "#222222",
          "flex": 1,
          "fontSize": 19,
          "fontWeight": "600",
          "marginRight": 8,
        }
      }
    >
      Plumbing Repair
    </Text>
    <Text
      style={
        {
          "color": "#222222",
          "fontSize": 19,
          "fontWeight": "700",
        }
      }
    >
      £500
    </Text>
  </View>
  <Text
    numberOfLines={3}
    style={
      {
        "color": "#717171",
        "fontSize": 15,
        "lineHeight": 21,
        "marginBottom": 12,
      }
    }
  >
    Fix leaky faucet in bathroom
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 8,
            "borderWidth": 1,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "#EFF6FF",
            "borderColor": "#BFDBFE",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 11,
              "fontWeight": "500",
            },
            {
              "color": "#2563EB",
            },
          ]
        }
      >
        Posted
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;
